Version 3.8.0 - 2015-12-09
* Add state field and remove harcoded path in templates.

Version 3.4.0 - 2014-11-03

Version 3.2.0 - 2014-05-22

Version 3.0.0 - 2013-11-11
* Initial release